# liboqs

./: CMakeLists.txt
.CMake/: compiler_opts.cmake
src/kem/bike/: CMakeLists.txt
src/kem/bike/additional_r3/: Makefile  kem.c  kem.h  ntl.cpp  ntl.h  sampling.c
tests/: CMakeLists.txt
